modified qr routes for regeneration as well
