# packages/api/routes/businessRoutes.ts
@@ -25,6 +25,7 @@ import {
   setOnboardingStatusComplete,
   checkIsBusinessInformationComplete,
   getBusinessQrCode,
+  updateBusinessQrCode,
 } from "../../database/db_interface";
 
 const router = express.Router();
@@ -261,87 +262,94 @@ router.post("/loyalty-program", async (req: Request, res: Response) => {
   }
 });
 
-router.get("/qr", async (req: Request, res: Response) => {
-  try {
-    //query db for qr_code field in the db
-    let qr_code_text = await getBusinessQrCode(req.auth.userId);
-
-    //if qr code text does not exist, generate one
-    if (!qr_code_text) {
-      console.log("no qr code to retrieve");
-    }
-
-    //creating the actual qr code
-    // Generate QR code as a data buffer
-    QRCode.toBuffer(
-      qr_code_text!,
-      {
-        type: "png",
-        color: {
-          dark: "#000000", // Black dots
-          light: "#FFFFFF", // White background
-        },
-      },
-      function (err, buffer) {
-        if (err) {
-          console.error("Failed to generate QR code:", err);
-          return res.status(500).send("Failed to generate QR code.");
-        }
-
-        // Create a PDF document
-        let doc = new PDFDocument();
-        res.setHeader("Content-Type", "application/pdf");
-        res.setHeader(
-          "Content-Disposition",
-          'attachment; filename="localoyalty_secret_qr.pdf"'
-        );
-
-        // Pipe the PDF into the HTTP response
-        doc.pipe(res);
-
-        // Add any additional PDF content here
-        doc
-          .fontSize(30)
-          .text(
-            "Warning! This is the secret key for giving stamps. Do not keep out in the public"
-          );
-
-        // Add QR code image from buffer
-        doc.image(buffer, {
-          fit: [250, 250], // Controls the size to fit the image into
-          align: "center", // Horizontal alignment (options: 'center', 'left', 'right')
-          valign: "center", // Vertical alignment (options: 'top', 'center', 'bottom')
-        });
-
-        // Finalize the PDF and end the document
-        doc.end();
-      }
-    );
-  } catch (Error: unknown) {
-    res.status(500).json({ message: "Something went wrong..." });
-  }
-});
-
-// Helper function for "/random-key" route 
+// Helper function for "/random-key" route
 // Returns 16 bytes encoded as a hexadecimal string
 function generateRandomKey(length: number): string {
   const randomBytes = new Uint8Array(length);
   crypto.getRandomValues(randomBytes);
 
-  let hexString = '';
+  let hexString = "";
   randomBytes.forEach((byte: number) => {
-      hexString += byte.toString(16).padStart(2, '0');
+    hexString += byte.toString(16).padStart(2, "0");
   });
   return hexString;
 }
 
-router.get("/random-key", (req: Request, res: Response) => {
+//helper to generate the pdf version of the QR Code
+function generateQRCode(qr_code_text: string, res: Response) {
+  //creating the actual qr code
+  // Generate QR code as a data buffer
+  QRCode.toBuffer(
+    qr_code_text!,
+    {
+      type: "png",
+      color: {
+        dark: "#000000", // Black dots
+        light: "#FFFFFF", // White background
+      },
+    },
+    function (err, buffer) {
+      if (err) {
+        console.error("Failed to generate QR code:", err);
+        return res.status(500).send("Failed to generate QR code.");
+      }
+
+      // Create a PDF document
+      let doc = new PDFDocument();
+      res.setHeader("Content-Type", "application/pdf");
+      res.setHeader(
+        "Content-Disposition",
+        'attachment; filename="localoyalty_secret_qr.pdf"'
+      );
+
+      // Pipe the PDF into the HTTP response
+      doc.pipe(res);
+
+      // Add any additional PDF content here
+      doc
+        .fontSize(30)
+        .text(
+          "Warning! This is the secret key for giving stamps. Do not keep out in the public"
+        );
+
+      // Add QR code image from buffer
+      doc.image(buffer, {
+        fit: [250, 250], // Controls the size to fit the image into
+        align: "center", // Horizontal alignment (options: 'center', 'left', 'right')
+        valign: "center", // Vertical alignment (options: 'top', 'center', 'bottom')
+      });
+
+      // Finalize the PDF and end the document
+      doc.end();
+    }
+  );
+}
+
+router.get("/qr", async (req: Request, res: Response) => {
   try {
-      const key = generateRandomKey(16);
-      res.status(200).json({ key: key });
+    //query db for qr_code field in the db
+    let qr_code_text = await getBusinessQrCode(req.auth.userId);
+
+    //if qr code text does not exist, generate one and insert into the correct spot in the vendor table
+    if (!qr_code_text || qr_code_text == "") {
+      qr_code_text = generateRandomKey(16);
+      await updateBusinessQrCode(req.auth.userId, qr_code_text);
+    }
+
+    generateQRCode(qr_code_text, res);
+  } catch (Error: unknown) {
+    res.status(500).json({ message: "Something went wrong..." });
+  }
+});
+
+router.post("/qr", async (req: Request, res: Response) => {
+  try {
+    const qr_code_text = generateRandomKey(16);
+    await updateBusinessQrCode(req.auth.userId, qr_code_text);
+    generateQRCode(qr_code_text, res);
   } catch (error) {
-      console.error("Failed to generate random key:", error);
-      res.status(500).json({ message: "Failed to generate random key." });
+    console.error("Failed to generate random key:", error);
+    res.status(500).json({ message: "Failed to generate random key." });
   }
 });
 
